--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
         "vscode:prepublish": "yarn build",
         "package": "vsce package",
         "build:sass": "yarn sass --no-source-map scss:styles && yarn sass --no-source-map scss:styles/origin",
-        "generate-tendark": "node -r esm scripts/tendark/generate"
+        "tendark-generate": "node -r esm .tendark/generate",
+        "tendark-package": "cd .tendark && vsce package"
     },
     "prettier": {
         "singleQuote": true,
